service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
spec:
  selector:
    app: wil-playground
  ports:
    - name: http
      port: 8888
      targetPort: 8888
      protocol: TCP
  type: ClusterIP
